axios设置Authorization为token(进行中)

--- a/src/pages/login/login.less
+++ b/src/pages/login/login.less
@@ -98,11 +98,14 @@ div{
                     }
                 }
                 .notes{
-                    position:absolute;
-                    top:55%;
-                    left:82%;
-                    transform:translate(-50%-50%);
-
+                    // position:absolute;
+                    // top:55%;
+                    // left:82%;
+                    // transform:translate(-50%-50%);
+                    
+                    text-align:center;
+                    // padding: 0 0;
+                    // line-height: 15px; 
                 }
                 .login-form-button{
                     width: 350px;
