查看编辑用户-数据显示

--- a/src/pages/admin/user/view/index.less
+++ b/src/pages/admin/user/view/index.less
@@ -94,4 +94,14 @@
             }
         }
     }
+
+    .ant-button{
+        margin-top: 15px;
+        text-align: center;
+        button:nth-child(1){
+            background-color: #2397e4; /* Green */
+            border: none;
+            color: white;
+        }
+    }
 }
