查看用户与编辑用户

--- a/src/pages/admin/user/view/index.less
+++ b/src/pages/admin/user/view/index.less
@@ -91,17 +91,27 @@
                         transition: all 0.3s;
                     }
                 }
+
+                .ant-button{
+                    margin-top: 15px;
+                    text-align: center;
+                    button:nth-child(1){
+                        background-color: #2397e4; /* Green */
+                        border: none;
+                        color: white;
+                    }
+                }
             }
         }
     }
 
-    .ant-button{
-        margin-top: 15px;
-        text-align: center;
-        button:nth-child(1){
-            background-color: #2397e4; /* Green */
-            border: none;
-            color: white;
-        }
-    }
+    // .ant-button{
+    //     margin-top: 15px;
+    //     text-align: center;
+    //     button:nth-child(1){
+    //         background-color: #2397e4; /* Green */
+    //         border: none;
+    //         color: white;
+    //     }
+    // }
 }
